images show on event show and index pages; images hidden if nothing input

--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -42,7 +42,7 @@
 				<ul>
 					<%for (let i = 0; i < events.length; i++) {%>
 						<li><p><a href="/event/<%=events[i].id%>"><%=events[i].name%></a></p><br />
-						<img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></li>
+						<img src="<%=events[i].img%>" class="img-responsive" style="width:100%" alt="<%=events[i].name%> Image"></li>
 					<%}%>
 				</ul>
 			</div>
@@ -53,6 +53,11 @@
 	<footer class="container-fluid text-center">
 		<p>Footer Here</p>
 	</footer>
+
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  		<script src="/js/app.js"></script>
+
 
 </body>
 </html>
