--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -35,7 +35,7 @@
 			<div class="col-lg-12 col-sm-12">
 			    <div class="card hovercard">
 			        <div class="card-background">
-			            <img class="card-bkimg" alt="" src="">
+			            <img class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
 			            <!-- Img here-->
 			        </div>
 
