created events show up on artist show page

--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -38,7 +38,7 @@
 
       <ul>
       <% for (let i = 0; i < artist.events.length; i++) { -%>
-        <li>Events: <a href="/event/<%=artist.events[i].id%>"> <%= artist.events[i].name%></a></li>
+        <li><a href="/event/<%=artist.events[i].id%>"> <%= artist.events[i].name%></a></li>
       <% } -%>
       </ul>
 
