--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -103,7 +103,7 @@
 
 				<div class="col-lg-12 col-sm-12">
 					<a class="btn btn-outline-dark btn-sm btn-block" href="/event/<%= event.id %>/edit">Edit Event</a>
-						<form action="/user/<%= event.id %>?_method=DELETE" method="POST">
+						<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
 							<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
 					</form>
 				</div>
