event delete route now removes events from artist show page; artist website links work; made all view input fields consistent

--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -31,14 +31,14 @@
           <% } -%>
         </select> <br/>
 
-        <input type="text" name="name" placeholder="name"><br />
-        <input type="text" name="genre" placeholder="genre"><br />
-        <input type="text" name="location" placeholder="location"><br />
-        <input type="text" name="website" placeholder="website"><br />
-        <input type="text" name="img" placeholder="image link"><br />
+        <input type="text" name="name" placeholder="Name"><br />
+        <input type="text" name="genre" placeholder="Genre"><br />
+        <input type="text" name="location" placeholder="Location"><br />
+        <input type="text" name="website" placeholder="Website"><br />
+        <input type="text" name="img" placeholder="Image Link"><br />
         <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
 
-        <button type="submit" name="button">Create artist</button>
+        <button type="submit" name="button">Create Artist</button>
 
       </form>
 
