--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -25,10 +25,10 @@
             <option value="<%=artists[i].id%>"><%= artists[i].name %></option>
           <% } -%>
         </select> <br/>
-        <input type="text" name="name" placeholder="name"><br />
-        <input type="text" name="venue" placeholder="venue"><br />
-        <input type="text" name="date" placeholder="date"><br />
-        <input type="text" name="img" placeholder="image link"><br />
+        <input type="text" name="name" placeholder="Name"><br />
+        <input type="text" name="venue" placeholder="Venue"><br />
+        <input type="text" name="date" placeholder="Date"><br />
+        <input type="text" name="img" placeholder="Image Link"><br />
         <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
 
         <button type="submit" name="button">Create Event</button>
