--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -1,36 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Edit Event</title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+	body { padding-top: 10px; };
+	</style>
 </head>
 <body>
-
 	<header>
+		<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
 
-    	<h1>Event Edit Page</h1>
+						<ul class="nav navbar-left">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/event">Events</a></li>
+							<li><a href="/artist">Artists</a></li>
+						</ul>
 
-      	<nav>
+						<ul class="nav navbar-right">
+							<li><a href="/event"><span class="glyphicon glyphicon-plus"></span>Back to Events</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
 
-          <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-          <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-
-      	</nav>
-
-  	</header>
 
   	<main>
 
-			<form action="/event/<%=event.id%>?_method=PUT" method="POST"><br />
+			<div class="container-fluid text-center">
+				<div class="col-lg-12 col-sm-12">
 
-				<input type="text" name="name" placeholder="Name" value="<%=event.name%>"><br />
-				<input type="text" name="venue" placeholder="Venue" value="<%=event.venue%>"><br />
-				<input type="text" name="date" placeholder="Date" value="<%=event.date%>"><br />
-				<input type="text" name="img" placeholder="Image Link" value="<%=event.img%>"><br />
-				<textarea name="description" rows="4" cols="40" placeholder="Description"><%=event.description%></textarea><br />
+					<h1>Edit <%=event.name%></h1>
 
-				<button type="submit" name="button">Submit Changes</button>
+					<form class= "form-inline-block" action="/event/<%=event.id%>?_method=PUT" method="POST">
 
-			</form>
+						<label class= "control-label" for="updateEventName">Update Event Name:</label>
+						<input type="text" class= "form-control" name="name" id= "updateEventName" placeholder="Eventname" value="<%=event.name%>"><br />
+
+						<label class= "control-label" for="updateVenue">Update Event Venue:</label>
+						<input type="text" class= "form-control" name="venue" placeholder="Venue" value="<%=event.venue%>"><br />
+
+						<label class= "control-label" for="updateEventDate">Update Event Date:</label>
+						<input type="text" class= "form-control" name="date" placeholder="Event Date" value="<%=event.date%>"><br />
+
+						<label class= "control-label" for="updateEventImage">Update Event Image:</label>
+						<input type="text" class= "form-control" name="img" placeholder="Event Image" value="<%=event.img%>"><br />
+
+						<label class= "control-label" for="updateEventDescription">Update Event Description:</label><br />
+						<textarea name="description" rows="4" cols="40" placeholder="Description"><%=event.description%></textarea><br />
+
+						<button class="btn btn-success mb-2 btn-block" type="submit">Submit Changes</button>
+					</form>
+				</div>
+
+
 
   	</main>
 
