--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -1,39 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>New Event</title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+	body { padding-top: 10px; };
+	</style>
 </head>
 <body>
 
 	<header>
+		<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
 
-    	<h1>Event New Page</h1>
+						<ul class="nav navbar-left">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/event">Events</a></li>
+							<li><a href="/artist">Artists</a></li>
+						</ul>
 
-      	<nav>
-          <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-          <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-        </nav>
-
-  	</header>
+						<ul class="nav navbar-right">
+							<li><a href="/artist/<%=artists.id%>"><span class="glyphicon glyphicon-plus"></span>Back to Artist</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
 
   	<main>
-  		<h4>Create New Event</h4>
 
-      <form action="/event" method="POST"><br />
-        <select name="artistId">
-          <% for (let i = 0; i < artists.length; i++) { -%>
-            <option value="<%=artists[i].id%>"><%= artists[i].name %></option>
-          <% } -%>
-        </select> <br/>
-        <input type="text" name="name" placeholder="Name"><br />
-        <input type="text" name="venue" placeholder="Venue"><br />
-        <input type="text" name="date" placeholder="Date"><br />
-        <input type="text" name="img" placeholder="Image Link"><br />
-        <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
+			<div class="container-fluid text-center">
+				<div class="col-lg-12 col-sm-12">
+					<form class= "form-inline-block" action="/event" method="POST">
 
-        <button type="submit" name="button">Create Event</button>
+						<select name="artistId">
+		          <% for (let i = 0; i < artists.length; i++) { -%>
+		            <option value="<%=artists[i].id%>"><%= artists[i].name %></option>
+		          <% } -%>
+		        </select> <br/>
 
-      </form>
+						<label class= "control-label" for="eventName">Event Name:</label>
+						<input type="text" class= "form-control" name="name" id= "eventName" placeholder="Name"><br />
+
+						<label class= "control-label" for="eventVenue">Event Venue:</label>
+						<input type="text" class= "form-control" name="venue" placeholder="Venue"><br />
+
+						<label class= "control-label" for="eventDate">Event Date:</label>
+						<input type="text" class= "form-control" name="date" placeholder="Event Date"><br />
+
+						<label class= "control-label" for="eventImage">Event Image:</label>
+						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
+
+						<label class= "control-label" for="eventDescription">Event Description:</label><br />
+						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
+
+						<button class="btn btn-success mb-2 btn-block" type="submit">Submit Changes</button>
+					</form>
+				</div>
+			</div>
+
   	</main>
 
 </body>
