--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>List of Users</title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+			body { padding-top: 10px; };
+	</style>
 </head>
 
 <body>
 
+	<header>
+		<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
 
-  <header>
+						<ul class="nav navbar-left">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/event">Events</a></li>
+							<li><a href="/artist">Artists</a></li>
+						</ul>
 
-    <h1>Artist Profile</h1>
+					</div>
+				</div>
+			</nav>
 
-      <nav>
-        <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-      </nav>
+		</div>
 
-  </header>
+		<div class="jumbotron">
+	  <div class="container text-center">
+	    <h1>Live Music Finder App</h1>
+	    <p>Some dang ol' catchy byline will go here</p>
+	  </div>
+		</div>
+
+
+	</header>
+
 
 			<main>
-				<h2>List of Artists</h2>
-				<ul>
-					<%for (let i = 0; i < artists.length; i++) {%>
-						<li><a href="/artist/<%=artists[i].id%>"><%=artists[i].name%></a></li>
-					<%}%>
-				</ul>
+				<div class="container-fluid bg-3 text-center">
+				<h3>Artists</h3><br>
+					<div class="row">
+						<div class="col-sm-3">
+							<ul>
+								<%for (let i = 0; i < artists.length; i++) {%>
+									<li><p><a href="/artist/<%=artists[i].id%>"><%=artists[i].name%></a></p><br />
+									<img src="<%=artists[i].img%>" id="artistListPic" class="img-responsive" style="width:100%" alt="<%=artists[i].name%>'s Photo"></li><br />
+								<%}%>
+							</ul><br />
+						</div>
+
+					</div>
+				</div>
+
 			</main>
 
 
