--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -2,47 +2,75 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>New Artist</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+    body { padding-top: 10px; };
+    </style>
   </head>
   <body>
 
-  	<header>
+      <header>
+    		<nav class="navbar navbar-inverse">
+    				<div class="container-fluid">
 
-	    <h1>Artist New Page</h1>
+    						<ul class="nav navbar-left">
+    							<li class="active"><a href="/">Home</a></li>
+    							<li><a href="/event">Events</a></li>
+    							<li><a href="/artist">Artists</a></li>
+    						</ul>
 
-      <nav>
-        <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-        <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-      </nav>
+    						<ul class="nav navbar-right">
+    							<li><a href="/user/<%=users.id%>"><span class="glyphicon glyphicon-plus"></span>Back to User</a></li>
+    						</ul>
+    					</div>
+    				</div>
+    			</nav>
+    		</header>
 
- 	  </header>
+        <main>
 
+          <div class="container-fluid text-center">
+    				<div class="col-lg-12 col-sm-12">
 
+              <h4>Create New Artist</h4>
 
-    <main>
+                <form action="/artist" method="POST"><br />
 
-      <h4>Create New Artist</h4>
+                  <select name="userId">
+                    <% for (let i = 0; i < users.length; i++) { -%>
+                      <option value="<%=users[i].id%>"><%= users[i].username %></option>
+                      <% } -%>
+                  </select> <br/>
 
-      <form action="/artist" method="POST"><br />
-        
-        <select name="userId">
-          <% for (let i = 0; i < users.length; i++) { -%>
-            <option value="<%=users[i].id%>"><%= users[i].username %></option>
-          <% } -%>
-        </select> <br/>
+                <label class= "control-label" for="artistName">Artist Name:</label>
+    						<input type="text" class= "form-control" name="name" id= "artistName" placeholder="Name"><br />
 
-        <input type="text" name="name" placeholder="Name"><br />
-        <input type="text" name="genre" placeholder="Genre"><br />
-        <input type="text" name="location" placeholder="Location"><br />
-        <input type="text" name="website" placeholder="Website"><br />
-        <input type="text" name="img" placeholder="Image Link"><br />
-        <textarea name="description" rows="4" cols="40" placeholder="Description"></textarea><br />
+    						<label class= "control-label" for="artistGenre">Genre:</label>
+    						<input type="text" class= "form-control" name="genre" placeholder="Genre"><br />
 
-        <button type="submit" name="button">Create Artist</button>
+    						<label class= "control-label" for="artistLocation">Location:</label>
+    						<input type="text" class= "form-control" name="location" placeholder="Location"><br />
 
-      </form>
+                <label class= "control-label" for="artistWebsite">Website:</label>
+    						<input type="text" class= "form-control" name="website" placeholder="Website"><br />
 
-    </main>
+    						<label class= "control-label" for="artistImage">Image Link:</label>
+    						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
+
+    						<label class= "control-label" for="artistDescription">Artist Description:</label><br />
+    						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
+
+    						<button class="btn btn-success mb-2 btn-block" type="submit">Create Artist</button>
+    					</form>
+    				</div>
+
+            
+        </div>
+      </main>
 
 
 
