--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -2,62 +2,126 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Artist Profile</title>
+  	<link rel="stylesheet" href="../css/style.css">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<style>
+  	body { padding-top: 10px; };
+  	</style>
   </head>
   <body>
 
-  	<header>
+      <header>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
 
-	    <h1>Artist Show Page</h1>
+                <ul class="nav navbar-left">
+                  <li class="active"><a href="/">Home</a></li>
+                  <li><a href="/event">Events</a></li>
+                  <li><a href="/artist">Artists</a></li>
+                </ul>
 
-	      <nav>
-            <button class="btn btn-outline-info btn-lg"><a href="/artist">Browse</a></button>
-            <button class="btn btn-outline-info btn-lg"><a href="/user">User Profile</a></button>
-	      </nav>
+                <ul class="nav navbar-right">
+                  <li><a href="/user"><span class="glyphicon glyphicon-plus"></span>Back to Users</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
- 	</header>
-
- 	<main>
-
-    <h4> <%=artist.name%> Attributes </h4>
-      <h6>Genre: <%=artist.genre%></h6>
-      <h6>Location: <%=artist.location%></h6>
-      <h6>Website: <a href="//<%=artist.website%>"><%=artist.website%></a></h6>
-      <h6>Profile Picture: </h6> <img src="<%=artist.img%>">
-      <h6>Description: <%=artist.description%></h6>
+        </div>
+      </header>
 
 
-    <h4> <%=artist.name%> Members </h4>
-      <ul>
-        <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-          <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
-        <% } -%>
-      </ul>
+ 	    <main>
+        <div class="col-lg-12 col-sm-12">
+            <div class="card hovercard">
+                <div class="card-background">
+                    <img class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
+                    <!-- Img here-->
+                </div>
+                <div class="card-info"> <span class="card-title"><h3> <%=artist.name%>'s Info </h3></span>
 
- 		<h4>Your Created Events</h4>
+                </div>
+            </div>
+            <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                    <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                        <div class="hidden-xs">About</div>
+                    </button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" id="members" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                        <div class="hidden-xs">Members</div>
+                    </button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" id="createdEvents" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        <div class="hidden-xs">Created Events</div>
+                    </button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        <div class="hidden-xs">Users Following</div>
+                    </button>
+                </div>
+            </div>
 
-      <ul>
-      <% for (let i = 0; i < artist.events.length; i++) { -%>
-        <li><a href="/event/<%=artist.events[i]._id%>"> <%= artist.events[i].name%></a></li>
-      <% } -%>
-      </ul>
+              <div class="well">
+                  <div class="tab-content">
 
-   		<button type="button" name="event"> <a href="/event/new">Create New Event</a></button>
-   		<button type="button" name="user"><a href="/user">Back to Browsing</a> </button>
+                    <div class="tab-pane fade in active" id="tab1">
+                      <h3>
+                        <ul>
+                          <h6>Genre: <%=artist.genre%></h6>
+                          <h6>Location: <%=artist.location%></h6>
+                          <h6>Website: <a href="//<%=artist.website%>"><%=artist.website%></a></h6>
+                          <h6>Profile Picture: </h6> <img src="<%=artist.img%>">
+                          <h6>Description: <%=artist.description%></h6>
+                        </ul>
+                      </h3>
+                    </div>
 
- 	</main>
+                    <div class="tab-pane fade in" id="tab2">
+                      <h4> <%=artist.name%> Members </h4>
+                        <ul>
+                          <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
+                            <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
+                          <% } -%>
+                        </ul>
+                    </div>
 
-  <footer>
+                    <div class="tab-pane fade in" id="tab3">
+                      <h3>Created Events</h3>
+                      <ul>
+                      <% for (let i = 0; i < artist.events.length; i++) { -%>
+                        <li><a href="/event/<%=artist.events[i]._id%>"> <%= artist.events[i].name%></a></li>
+                      <% } -%>
+                      </ul>
+                    </div>
 
-    <button class="btn btn-outline info btn-lrg"> <a href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%> </a> </button>
+                    <div class="tab-pane fade in" id="tab4">
+                      <h3></h3>
+                    </div>
 
-    <form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
-        <button class= "btn-outline info btn-lrg">Delete <%=artist.name%> </button>
+                  </div>
+                </div>
+              </div>
 
-  </footer>
+              <div class="col-lg-12 col-sm-12">
+          			<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
+          				<form action="/user/<%= artist.id %>?_method=DELETE" method="POST">
+          					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
+          			</form>
+          		</div>
 
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-      <script src="/js/app.js"></script>
+ 	       </main>
+
+
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="/js/app.js"></script>
 
   </body>
 </html>
