made all navbars consistent

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -20,8 +20,9 @@
 
               <ul class="nav navbar-left">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/event">Events</a></li>
+                <li><a href="/user">Users</a></li>
                 <li><a href="/artist">Artists</a></li>
+                <li><a href="/event">Events</a></li>
               </ul>
 
             </div>
