--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -19,8 +19,8 @@
 
     						<ul class="nav navbar-left">
     							<li class="active"><a href="/">Home</a></li>
-    							<li><a href="/event">Events</a></li>
-    							<li><a href="/artist">Artists</a></li>
+                  <li><a href="/user">Users</a></li>
+                  <li><a href="/event">Events</a></li>
     						</ul>
 
     						<ul class="nav navbar-right">
