--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -18,6 +18,7 @@
 
 								<ul class="nav navbar-left">
 									<li class="active"><a href="/">Home</a></li>
+									<li><a href="/user">Users</a></li>									
 									<li><a href="/artist">Artists</a></li>
 								</ul>
 
