--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -36,14 +36,12 @@
           <div class="container-fluid text-center">
     				<div class="col-lg-12 col-sm-12">
 
-              <h4>Create New Artist</h4>
+              <h4>Create New Artist for <%=currentUser.username%></h4>
 
                 <form action="/artist" method="POST"><br />
 
-                  <select name="userId">
-                    <% for (let i = 0; i < users.length; i++) { -%>
-                      <option value="<%=users[i].id%>"><%= users[i].username %></option>
-                      <% } -%>
+                  <select class="invisible" name="userId">
+                      <option value="<%=currentUser._id%>"><%= currentUser.username %></option>
                   </select> <br/>
 
                 <label class= "control-label" for="artistName">Artist Name:</label>
