--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -94,12 +94,12 @@
 
                     <div class="tab-pane fade in" id="tab3">
                       <h3>Created Events</h3>
-                      <a class="btn btn-outline-info" href="/event/new">Create New Event</a>
                       <ul>
                       <% for (let i = 0; i < artist.events.length; i++) { -%>
                         <li><a href="/event/<%=artist.events[i]._id%>"> <%= artist.events[i].name%></a></li>
                       <% } -%>
                       </ul>
+                      <a class="btn btn-info btn-sm" href="/event/new">Create New Event</a>
                     </div>
 
                     <div class="tab-pane fade in" id="tab4">
