changed auth page login/register modals

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -15,6 +15,7 @@
 
 
     <header>
+
       <nav class="navbar navbar-inverse">
           <div class="container-fluid">
 
@@ -25,7 +26,17 @@
                 <li><a href="/event">Events</a></li>
               </ul>
 
-            </div>
+              <ul class= "nav navbar-right">
+                <li> <div class="">
+                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+                     Log In
+                   </button>
+                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModal">
+                     Sign Up
+                   </button>
+                 </div></li>
+              </ul>
+
           </div>
         </nav>
       </header>
@@ -34,6 +45,9 @@
 
       <div class="jumbotron">
         <div class="container text-center">
+          <% if (message) { -%>
+             <p style="background-color: pink"><%= message %></p>
+          <% } -%>
           <h1>Live Music Finder App</h1>
           <p>Some dang ol' catchy byline will go here</p>
         </div>
@@ -91,9 +105,6 @@
                                If you register, you can do neat things like become an artist and create events!
                            </h3>
                            <div class="">
-                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
-                               Sign Up Here!
-                             </button>
                            </div>
                        </div>
                    </div>
@@ -103,68 +114,87 @@
        <div id="push">
        </div>
 
-       <!-- Modal -->
+
+
+       <!-- Log In Modal -->
        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
          <div class="modal-dialog" role="document">
            <div class="modal-content">
              <div class="modal-header">
-               <h5 class="modal-title" id="exampleModalLabel">Register or Sign In Below</h5>
+               <h5 class="modal-title" id="loginModalLabel">Login Below</h5>
+
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
                </button>
+
              </div>
-             <div class="modal-body">
-               <% if (message) { -%>
-                  <p style="background-color: pink"><%= message %></p>
-               <% } -%>
 
-               <ul class="nav nav-tabs">
+               <div class="modal-body">
+                 <div class="container-fluid">
+                  <div class="row">
+                     <form action="/login" method="POST" id="login">
+                         <div class="form-group">
+                           <h4>Sign In</h4>
 
-                   <li class="nav-item">
-                     <a class="nav-link active" href="#">Login</a>
-                   </li>
+                               <input type="text" name="username" placeholder="username">
+                               <input type="password" name="password" placeholder="password">
 
-                     <li class="nav-item">
-                       <a class="nav-link" href="#">Register</a>
-                     </li>
+                           </div>
+                         </form>
 
-                   </ul>
+                      </div>
+                   </div>
+                </div>
 
+                 <div class="modal-footer">
+                   <button type="submit" class= "btn btn-primary">Submit</button>
+               </div>
 
-                   <div class="row">
-                   <form action="/login" method="POST" id="login">
-                     <div class="form-group">
-                       <h4>Sign In!</h4>
-                         <input type="text" name="username" placeholder="username">
-                         <input type="password" name="password" placeholder="password">
-                         <button type="submit">Submit</button>
-                     </div>
-                   </form>
-
-                   <form action="/register" method="POST" class="invisible" id="registration">
-                     <div class="form-group">
-                       <h4>Sign up!</h4>
-                         <input type="text" name="username" placeholder="username">
-                         <input type="text" name="email" placeholder="email">
-                         <input type="password" name="password" placeholder="password">
-                         <button type="submit">Register</button>
-                     </div>
-                   </form>
-
-                 </div>
              </div>
-             <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-             </div>
-           </div>
          </div>
        </div>
 
+       <!-- Register Modal -->
+       <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+           <div class="modal-content">
+             <div class="modal-header">
+               <h5 class="modal-title" id="registerModalLabel">Register Below</h5>
+
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+               </button>
+
+             </div>
+
+               <div class="modal-body">
+                 <div class="container-fluid">
 
 
+                  <div class="row">
 
-      </div>
-    </div>
+                     <form action="/register" method="POST" id="registration">
+                       <div class="form-group">
+                         <h4>Sign up</h4>
+                           <input type="text" name="username" placeholder="username">
+                           <input type="text" name="email" placeholder="email">
+                           <input type="password" name="password" placeholder="password">
+
+                       </div>
+                     </form>
+
+                   </div>
+                 </div>
+                </div>
+
+                 <div class="modal-footer">
+                   <button type="submit" class= "btn btn-primary">Register</button>
+               </div>
+             </div>
+           </div>
+         </div>
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
