--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -90,6 +90,7 @@
                             <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
                           <% } -%>
                         </ul>
+                        <a class="btn btn-info btn-sm" href="#">Add Member</a>
                     </div>
 
                     <div class="tab-pane fade in" id="tab3">
