--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -41,7 +41,9 @@
                     <img class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
                     <!-- Img here-->
                 </div>
-                <div class="card-info"> <span class="card-title"><h3> <%=artist.name%>'s Info </h3></span>
+                <div class="card-info">
+                  <span class="card-title"><h3> <%=artist.name%>'s Info </h3></span>
+                  <span class= 'glyphicon glyphicon-heart'>No. of User Likes</span>
 
                 </div>
             </div>
@@ -52,17 +54,17 @@
                     </button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" id="members" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                    <button type="button" id="members" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                         <div class="hidden-xs">Members</div>
                     </button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" id="createdEvents" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                    <button type="button" id="createdEvents" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
                         <div class="hidden-xs">Created Events</div>
                     </button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                    <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
                         <div class="hidden-xs">Users Following</div>
                     </button>
                 </div>
