--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -5,8 +5,14 @@
     <title>Artist Profile</title>
   	<link rel="stylesheet" href="../css/style.css">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/app.js"></script>
+
+
   	<style>
   	body { padding-top: 10px; };
   	</style>
@@ -90,7 +96,24 @@
                             <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
                           <% } -%>
                         </ul>
-                        <a class="btn btn-info btn-sm" href="#">Add Member</a>
+
+
+
+                        <div class="btn-group dropright">
+                            <button type="button" class="btn btn-secondary">
+                               Add Member
+                            </button>
+                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <span class="sr-only">Toggle Dropright</span>
+                            </button>
+                            <div class="dropdown-menu">
+                              <% for (let i = 0; i < users.length; i++) { %>
+                                  <button class="dropdown-item" type="button"><%=users[i].username%></button>
+                              <% } %>
+                            </div>
+                        </div>
+
+
                     </div>
 
                     <div class="tab-pane fade in" id="tab3">
@@ -122,8 +145,7 @@
 
 
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="/js/app.js"></script>
+   
 
   </body>
 </html>
