--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -42,10 +42,10 @@
                     <!-- Img here-->
                 </div>
                 <div class="card-info">
-                  <span class="card-title"><h3> <%=artist.name%>'s Info </h3></span>
-                  <span class= 'glyphicon glyphicon-heart'>No. of User Likes</span>
-
+                  <span class="card-title"><h3>About <%=artist.name%></h3></span>
+                  <button type="button" class= "btn-lg" name="artistUserLikes" onclick="artistLiked();"><span class= "glyphicon glyphicon-heart"></span> Like <%=artist.name%></button>
                 </div>
+
             </div>
             <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
                 <div class="btn-group" role="group">
@@ -74,8 +74,8 @@
                   <div class="tab-content">
 
                     <div class="tab-pane fade in active" id="tab1">
-                      <h3>
                         <ul>
+                          <h6><span class= 'glyphicon glyphicon-heart'>No. of User Likes</span></h6>
                           <h6>Genre: <%=artist.genre%></h6>
                           <h6>Location: <%=artist.location%></h6>
                           <h6>Website: <a href="//<%=artist.website%>"><%=artist.website%></a></h6>
