--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -18,7 +18,7 @@
 
 								<ul class="nav navbar-left">
 									<li class="active"><a href="/">Home</a></li>
-									<li><a href="/user">Users</a></li>									
+									<li><a href="/user">Users</a></li>
 									<li><a href="/artist">Artists</a></li>
 								</ul>
 
@@ -41,6 +41,7 @@
 			        </div>
 
 			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
+								<button type="button" class= "btn-lg" name="eventAttendees" onclick="eventAttendance();"><span class= "glyphicon glyphicon-plus"></span> Attend <%=event.name%></button>
 
 			        </div>
 			    </div>
@@ -50,21 +51,20 @@
 			                <div class="hidden-xs">About</div>
 			            </button>
 			        </div>
-			        <div class="btn-group" role="group">
-			            <button type="button" id="interested" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-			                <div class="hidden-xs">Interested</div>
-			            </button>
-			        </div>
-			        <div class="btn-group" role="group">
-			            <button type="button" id="going" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-			                <div class="hidden-xs">Going</div>
-			            </button>
-			        </div>
+
+
 							<div class="btn-group" role="group">
-			            <button type="button" id="artists" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			            <button type="button" id="artists" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 			                <div class="hidden-xs">Artists</div>
 			            </button>
 			        </div>
+
+							<div class="btn-group" role="group">
+			            <button type="button" id="going" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+			                <div class="hidden-xs">Going</div>
+			            </button>
+			        </div>
+
 			    </div>
 
 			      <div class="well">
@@ -80,15 +80,8 @@
 										</ul>
 					        </div>
 
-					        <div class="tab-pane fade in" id="tab2">
-					          <h3>Users Interested: <%= event.meta.interested %></h3>
-					        </div>
 
-					        <div class="tab-pane fade in" id="tab3">
-					          <h3>Users Going: <%= event.meta.going %> </h3>
-					        </div>
-
-									<div class="tab-pane fade in" id="tab4">
+									<div class="tab-pane fade in" id="tab2">
 					          <h3>Affiliated Artists</h3>
 					          	<ul>
 						          	<% for (let i = 0; i < event.hostArtists.length; i++) { -%>
@@ -96,6 +89,13 @@
 						          	<% } -%>
 					          	</ul>
 					        </div>
+
+					        <div class="tab-pane fade in" id="tab3">
+					          <h3>Users Attending: <%= event.meta.going %></h3>
+					        </div>
+
+
+
 					      </div>
 			    	</div>
 
