--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -10,7 +10,6 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/js/app.js"></script>
 
 
   	<style>
@@ -93,7 +92,7 @@
 
                     <div class="tab-pane fade in" id="tab2">
                       <h4> <%=artist.name%> Members </h4>
-                        <ul>
+                        <ul id="bandMembers">
                           <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
                             <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
                           <% } -%>
@@ -110,7 +109,7 @@
                             </button>
                             <div class="dropdown-menu">
                               <% for (let i = 0; i < users.length; i++) { %>
-                                  <button class="dropdown-item" type="button"><%=users[i].username%></button>
+                                  <a href="/artist/<%=artist.id%>/addUser/<%=users[i].id%>" class="dropdown-item"><%=users[i].username%></a>
                               <% } %>
                             </div>
                         </div>
@@ -145,9 +144,26 @@
 
  	       </main>
 
+         <% 
+          // for (let j = 0; j < users.length; j++) {
+          //   users[j].addEventListener('click', function (event) {
+          //      if (users[i].username.toString() === target.innerText.toString()) {
+          //         currentUser = users[i];
+          //         id = users[i].id;
+          //      }
+
+          //      target = event.currentTarget;
+          //      console.log(target.innerText, " this is the selected username");
+          //      $("#bandMembers").append("<li><a href=" + "/user/" + id + ">" + target.innerText + "</a></li>");
+
+          //     });
+          // }
+          
+          %>
 
 
-   
+       <script src="/js/app.js"></script>
+
 
   </body>
 </html>
