added counter functionality to event attendance button

--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -41,7 +41,7 @@
 			        </div>
 
 			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
-								<button type="button" class= "btn-lg" name="eventAttendees" onclick="eventAttendance();"><span class= "glyphicon glyphicon-plus"></span> Attend <%=event.name%></button>
+								<button type="button" class= "btn-lg" name="eventAttendees" id = "eventAttendance"><span class= "glyphicon glyphicon-plus"></span> Attend <%=event.name%></button>
 
 			        </div>
 			    </div>
