--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -5,11 +5,12 @@
     <title>Artist Profile</title>
   	<link rel="stylesheet" href="../css/style.css">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
   	<style>
   	body { padding-top: 10px; };
   	</style>
@@ -46,7 +47,7 @@
                 </div>
                 <div class="card-info">
                   <span class="card-title"><h3>About <%=artist.name%></h3></span>
-                  <button type="button" class= "btn-lg" name="artistUserLikes" onclick="artistLiked();"><span class= "glyphicon glyphicon-heart"></span> Like <%=artist.name%></button>
+                  <button type="button" class= "btn-lg" name="artistUserLikes" id= "artistUserLike"><span class= "glyphicon glyphicon-heart"></span> Like <%=artist.name%></button>
                 </div>
 
             </div>
@@ -90,7 +91,7 @@
 
                     <div class="tab-pane fade in" id="tab2">
                       <h4> <%=artist.name%> Members </h4>
-                        <ul id="bandMembers">
+                        <ul>
                           <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
                             <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
                           <% } -%>
@@ -107,7 +108,7 @@
                             </button>
                             <div class="dropdown-menu">
                               <% for (let i = 0; i < users.length; i++) { %>
-                                  <a href="/artist/<%=artist.id%>/addUser/<%=users[i].id%>" class="dropdown-item"><%=users[i].username%></a>
+                                  <button class="dropdown-item" type="button"><%=users[i].username%></button>
                               <% } %>
                             </div>
                         </div>
@@ -135,7 +136,7 @@
 
               <div class="col-lg-12 col-sm-12">
           			<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
-          				<form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
+          				<form action="/user/<%= artist.id %>?_method=DELETE" method="POST">
           					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
           			</form>
           		</div>
@@ -143,7 +144,6 @@
  	       </main>
 
 
-       <script src="/js/app.js"></script>
 
 
   <script src="/js/app.js"></script>
