like and attendance button jquery rewritten

--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -123,7 +123,7 @@
                         <li><a href="/event/<%=artist.events[i]._id%>"> <%= artist.events[i].name%></a></li>
                       <% } -%>
                       </ul>
-                      <a class="btn btn-info btn-sm" href="/event/new">Create New Event</a>
+                      <a class="btn btn-info btn-sm" id= "createNewEvent" href="/event/new">Create New Event</a>
                     </div>
 
                     <div class="tab-pane fade in" id="tab4">
