--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -55,16 +55,16 @@
 	        </div>
 	        <div class="btn-group" role="group">
 	            <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-	                <div class="hidden-xs">Events</div>
-	            </button>
-	        </div>
-	        <div class="btn-group" role="group">
-	            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 	                <div class="hidden-xs">Likes</div>
 	            </button>
 	        </div>
+	        <div class="btn-group" role="group">
+	            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+	                <div class="hidden-xs">Attending</div>
+	            </button>
+	        </div>
 					<div class="btn-group" role="group">
-	            <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+	            <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
 	                <div class="hidden-xs">Artists</div>
 	            </button>
 	        </div>
@@ -83,11 +83,11 @@
 			        </div>
 
 			        <div class="tab-pane fade in" id="tab2">
-			          <h3>Events Created</h3>
+			          <h3>Artists Liked</h3>
 			        </div>
 
 			        <div class="tab-pane fade in" id="tab3">
-			          <h3>Events Liked</h3>
+			          <h3>Events Attending</h3>
 			        </div>
 
 							<div class="tab-pane fade in" id="tab4">
