back to plain ol' event makin

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -48,7 +48,7 @@
 				<ul>
 					<%for (let i = 0; i < users.length; i++) {%>
 						<li><p><a href="/user/<%=users[i].id%>"><%=users[i].username%></a></p><br />
-						<img src="<%=users[i].avatar%>" id="userListPic" class="img-responsive" style="width:100%" alt="<%=users[i].name%>'s Avatar"></li>
+						<img src="<%=users[i].avatar%>" id="userListPic" class="img-responsive" style="width:100%" alt=""></li>
 					<%}%>
 				</ul>
 	    </div>
