updated placeholders in inputs so they begin with capital letters

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -136,8 +136,8 @@
                          <div class="form-group">
                            <h4>Sign In</h4>
 
-                               <input type="text" name="username" placeholder="username">
-                               <input type="password" name="password" placeholder="password">
+                               <input type="text" name="username" placeholder="Username">
+                               <input type="password" name="password" placeholder="Password">
                                 <button type="submit" class= "btn btn-primary">Submit</button>
                          </div>
 
@@ -175,9 +175,9 @@
                      <form action="/register" method="POST" id="registration">
                        <div class="form-group">
                          <h4>Sign up</h4>
-                           <input type="text" name="username" placeholder="username">
-                           <input type="text" name="email" placeholder="email">
-                           <input type="password" name="password" placeholder="password">
+                           <input type="text" name="username" placeholder="Username">
+                           <input type="text" name="email" placeholder="Email">
+                           <input type="password" name="password" placeholder="Password">
                            <button type="submit" class= "btn btn-primary">Register</button>
                        </div>
                      </form>
