--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -39,6 +39,7 @@
 
 
  	    <main>
+        <div class="container-fluid">
         <div class="col-lg-12 col-sm-12">
             <div class="card hovercard">
                 <div class="card-background">
@@ -153,6 +154,7 @@
           			</form>
           		</div>
 
+            </div>
  	       </main>
 
 
