--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,11 +1,13 @@
+
+
 a {
 	text-decoration: none;
-	
+
 	&:hover {
 	text-decoration: none;
 	}
 }
 
 ul {
-	list-style-type: none;
+	list-style: none;
 }
