--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -41,9 +41,9 @@
   </div>
 	</div>
 
-	<div class="container-fluid bg-3 text-center">
-  <h3>Users</h3><br>
-  	<div class="row">
+	<div class="container-fluid">
+  <h3 class = "text-center">Users</h3><br>
+  	<div class="row justify-content-around">
     	<div class="col-sm-3">
 				<ul>
 					<%for (let i = 0; i < users.length; i++) {%>
